syntax = "proto3";
package eventpb;

import "metapb.proto";

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

enum EventType {
    RangeSplitAck        = 0;
    RaftErr              = 1;
    NodeBuildAck         = 2;
    RangeDeleteAck       = 3;
    EventStatistics      = 4;
    RangeSplitKey        = 5;
    StoreErr             = 6;
}

enum StatisticsType {
    RaftSplit            = 0;
    ApplySnapshot        = 1;
    LeaderLose           = 2;
    PeerAdd              = 3;
    PeerRemove           = 4;
    LeaderReign          = 5;
}

message EventRangeSplitAck {
    uint64 task_id           = 1;
    metapb.Range range       = 2;
    metapb.Range left_range  = 3;
    metapb.Range right_range = 4;
}

message EventRangeSplitKey {
    uint64 task_id           = 1;
    metapb.Range range       = 2;
    bytes  split_key         = 3;
}

message EventRangeDeleteAck {
    uint64 task_id           = 1;
    metapb.Range range       = 2;
}

message EventRaftErr {
    uint64 node_id        = 1;
    uint64 range_id       = 2;
    string error          = 3;
}

message EventStoreErr {
    uint64 node_id        = 1;
    uint64 range_id       = 2;
    string error          = 3;
}

message EventNodeBuildAck {
    string ip           = 1;
    string key          = 2;
    string err          = 3;
}

message EventEventStatistics {
    string db_name        = 1;
    string table_name     = 2;
    uint64 range_id     = 3;
    uint64 node_id      = 4;

    int64 startTime     = 5;
    int64 endTime       = 6;

    StatisticsType statisticsType =7;
}

message Event {
    EventType type                                    = 1;
    EventRangeSplitAck event_range_split_ack          = 2;
    EventRaftErr event_raft_err                       = 3;
    EventNodeBuildAck event_node_build_ack            = 4;
    EventRangeDeleteAck event_range_delete_ack        = 5;

    EventEventStatistics event_event_statistics       = 6;
    EventRangeSplitKey event_range_split_key          = 7;
    EventStoreErr event_store_err                     = 8;
}
